gitops/clusters/de/hetzner/cluster/apps/valheim/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valheim
  namespace: valheim
spec:
  serviceName: valheim
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: valheim
  template:
    metadata:
      labels:
        app.kubernetes.io/name: valheim
    spec:
      nodeSelector:
        node.kubernetes.io/instance-type: cx33
      terminationGracePeriodSeconds: 120
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: valheim
          image: ghcr.io/community-valheim-tools/valheim-server:1.2.0
          ports:
            - name: game
              containerPort: 32456
              protocol: UDP
            - name: query
              containerPort: 32457
              protocol: UDP
            - name: crossplay
              containerPort: 32458
              protocol: UDP
          resources:
            requests:
              cpu: "3"
              memory: 5Gi
            limits:
              cpu: "4"
              memory: 6Gi
          readinessProbe:
            httpGet:
              path: /status.json
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 30
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config
              mountPath: /opt/valheim
              subPath: server
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: hcloud-volumes
        resources:
          requests:
            storage: 10Gi
